@@ -1,1 +1,2 @@
 Remove Pagmo.setGenerationNumber
+Remove NLopt.SetSeed
